0023593: XCAFDoc_DocumentTool label must be removed from internal map upon closing the XDE document